<resources>
    <string name="app_name">MobileShop</string>
    <string name="title_productmodule">ProductModule</string>
    <string name="title_detailsmodule">Details</string>
    <string name="title_cartmodule">Cart</string>
    <string name="my_place_text">Zihuatanejo, Gro</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="hot_sales">Hot sales</string>
    <string name="see_more">see more</string>
    <string name="best_seller">Best Seller</string>
    <string name="profile_name">Explorer</string>
    <string name="filter_options">Filter options</string>
    <string name="done">Done</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="product_details">Product Details</string>
    <string name="my_cart">My Cart</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="add_adress">Add address</string>

    <string-array name="brand">
        <item>Samsung</item>
        <item>Iphone</item>
        <item>Xiaomi</item>
    </string-array>

    <string-array name="price">
        <item>$0 - $10000</item>
    </string-array>

    <string-array name="size">
        <item>4.5 to 5.5 inches</item>
    </string-array>
</resources>