<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CartActivity"
    android:background="@color/grey_background">

    <TextView
        android:id="@+id/filter_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_adress"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@id/my_place_button"
        app:layout_constraintEnd_toStartOf="@id/my_place_button"
        app:layout_constraintTop_toTopOf="@id/my_place_button" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/base_blue"
        android:padding="5dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/my_place_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/base_orange"
        android:src="@drawable/ic_my_place"
        android:tint="@color/white"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_button" />

    <TextView
        android:id="@+id/my_cart_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_cart"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintStart_toStartOf="@id/back_button"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/my_cart_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/cart_background">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/top_line"
            android:layout_marginTop="5dp"
            tools:listitem="@layout/item_cart"/>

        <View
            android:id="@+id/top_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_background"
            app:layout_constraintBottom_toTopOf="@id/total"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:id="@+id/delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/checkout_button"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@id/bottom_line"/>

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/checkout_button"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@id/delivery"/>

        <TextView
            android:id="@+id/delivery_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Free"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginStart="-70dp"
            app:layout_constraintTop_toTopOf="@id/delivery"
            app:layout_constraintStart_toEndOf="@id/checkout_button"/>

        <TextView
            android:id="@+id/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$6,000 us"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginStart="-70dp"
            app:layout_constraintTop_toTopOf="@id/total"
            app:layout_constraintStart_toEndOf="@id/checkout_button"/>
        <View
            android:id="@+id/bottom_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_background"
            app:layout_constraintBottom_toTopOf="@id/checkout_button"
            android:layout_marginBottom="30dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/checkout_button"
            android:layout_width="320dp"
            android:layout_height="54dp"
            android:text="@string/checkout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>