<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/grey_background">

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ScrollViewCount">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/ic_my_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_my_place"
        android:layout_marginEnd="11dp"
        app:layout_constraintEnd_toStartOf="@id/my_place_text"
        app:layout_constraintTop_toTopOf="@id/my_place_text"
        app:layout_constraintBottom_toBottomOf="@id/my_place_text"/>

            <TextView
                android:id="@+id/my_place_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mark_pro"
                android:text="@string/my_place_text"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/ic_filter" />

    <ImageView
        android:id="@+id/change_my_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_change"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/my_place_text"
        app:layout_constraintTop_toTopOf="@id/my_place_text"
        app:layout_constraintBottom_toBottomOf="@id/my_place_text"/>

    <ImageView
        android:id="@+id/ic_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_filter"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/select_category_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_category"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/my_place_text"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/view_all_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all"
        android:textSize="16sp"
        android:textColor="@color/base_orange"
        app:layout_constraintEnd_toEndOf="@id/ic_filter"
        app:layout_constraintTop_toTopOf="@id/select_category_text"
        app:layout_constraintBottom_toBottomOf="@id/select_category_text"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/category_recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:listitem="@layout/item_category"
        android:layout_marginTop="15dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/select_category_text"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="0dp"
        android:layout_height="34dp"
        app:searchIcon="@drawable/ic_search"
        app:queryHint="@string/app_name"
        android:layout_marginTop="15dp"
        android:background="@drawable/search_view_background"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@id/select_category_text"
        app:layout_constraintTop_toBottomOf="@id/category_recyclerView"
        app:layout_constraintEnd_toStartOf="@id/view_all_text"/>

    <ImageView
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:padding="9dp"
        android:layout_marginStart="11dp"
        app:layout_constraintStart_toEndOf="@id/search_view"
        app:layout_constraintTop_toTopOf="@id/search_view"
        android:background="@drawable/ellipse_orange"
        android:src="@drawable/ic_search_filter"/>

    <TextView
        android:id="@+id/hot_sales_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hot_sales"
        android:layout_marginTop="25dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/search_view"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hot_sales_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_hot_sales"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/hot_sales_text"/>

    <TextView
        android:id="@+id/see_more_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_more"
        android:textSize="16sp"
        android:textColor="@color/base_orange"
        app:layout_constraintEnd_toEndOf="@id/ic_filter"
        app:layout_constraintTop_toTopOf="@id/hot_sales_text"
        app:layout_constraintBottom_toBottomOf="@id/hot_sales_text"/>

    <TextView
        android:id="@+id/best_seller_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/best_seller"
        android:layout_marginTop="25dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/hot_sales_recyclerView"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/see_more_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_more"
        android:textSize="16sp"
        android:textColor="@color/base_orange"
        app:layout_constraintEnd_toEndOf="@id/ic_filter"
        app:layout_constraintTop_toTopOf="@id/best_seller_text"
        app:layout_constraintBottom_toBottomOf="@id/best_seller_text"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/best_seller_recyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_best_seller"
                android:orientation="vertical"
                android:foregroundGravity="center"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/best_seller_text"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@drawable/bottom_nav_background"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/profile_ellipse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ellipse_white"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/profile_name" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_name"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ic_cart"
            app:layout_constraintTop_toTopOf="parent" />

       <ImageView
           android:id="@+id/ic_cart"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/ic_cart"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintStart_toEndOf="@id/profile_name"
           app:layout_constraintEnd_toStartOf="@id/ic_favorite"
           app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cart_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textColor="@color/base_orange"
            app:layout_constraintTop_toTopOf="@id/ic_cart"
            app:layout_constraintBottom_toTopOf="@id/ic_cart"
            app:layout_constraintStart_toEndOf="@id/ic_cart"/>

        <ImageView
            android:id="@+id/ic_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ic_cart"
            app:layout_constraintEnd_toStartOf="@id/ic_profile"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_profile"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ic_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/bottom_sheet_container"
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent">

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>