<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mobileshop.ui.activity.DetailsActivity"
    android:background="@color/grey_background">

    <TextView
        android:id="@+id/product_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_details"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cart_button" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/base_blue"
        android:padding="5dp"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/cart_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_background"
        android:src="@drawable/ic_cart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_button" />
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_photo_recycler_view"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/main_photo_recycler_view"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bottom_sheet_background">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Samsung S20 Plus"
            android:textSize="24sp"
            android:textColor="@color/base_blue"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="@id/favorite_button"
            app:layout_constraintBottom_toBottomOf="@id/favorite_button"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/favorite_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:backgroundTint="@color/base_blue"
            android:padding="5dp"
            android:src="@drawable/ic_favorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RatingBar
            android:id="@+id/stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:stepSize="0.5"
            android:numStars="5"
            style="@style/CustomRatingBar"
            android:isIndicator="true"
            android:rating="2.0"
            app:layout_constraintTop_toBottomOf="@id/product_name"
            app:layout_constraintStart_toStartOf="@id/product_name" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/choose_buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/stars"
            app:layout_constraintStart_toStartOf="@id/stars"
            app:layout_constraintEnd_toEndOf="@id/favorite_button"
            app:tabRippleColor="@color/base_orange"
            app:tabIndicatorColor="@color/base_orange"
            app:tabSelectedTextColor="@color/base_blue"
            app:tabTextColor="@color/grey_text">

            <com.google.android.material.tabs.TabItem
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/shop" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/details" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/features" />
        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:id="@+id/choosen_fragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/choose_buttons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>